@@ -665,9 +665,9 @@ LISPSYM(file_error,"FILE-ERROR",lisp)
 LISPSYM(open,"OPEN",lisp)
 LISPSYM(directory,"DIRECTORY",lisp)
 LISPSYM(cd,"CD",ext)
-LISPSYM(make_dir,"MAKE-DIR",ext)
-LISPSYM(delete_dir,"DELETE-DIR",ext)
-LISPSYM(rename_dir,"RENAME-DIR",ext)
+LISPSYM(make_directory,"MAKE-DIRECTORY",ext)
+LISPSYM(delete_directory,"DELETE-DIRECTORY",ext)
+LISPSYM(rename_directory,"RENAME-DIRECTORY",ext)
 LISPSYM(ensure_directories_exist,"ENSURE-DIRECTORIES-EXIST",lisp)
 LISPSYM(file_write_date,"FILE-WRITE-DATE",lisp)
 LISPSYM(file_author,"FILE-AUTHOR",lisp)
