@@ -332,8 +332,8 @@
  '(re-export featurep make-encoding encoding
    encoding-line-terminator #+UNICODE encoding-charset
    times show-stack gc exit quit bye expand-form xor mapcap maplap
-   proper-list-p elastic-newline absolute-pathname
-   probe-directory cd make-dir delete-dir rename-dir default-directory dir
+   proper-list-p elastic-newline absolute-pathname default-directory cd dir
+   probe-directory make-directory delete-directory rename-directory
    xgcd exquo mod-expt ! evalhook applyhook substring string-concat
    string-char make-char string-width char-width
    int-char char-bits char-font char-bit set-char-bit char-key
